Fixes the legend z-index on the explore-detail page

--- a/src/styles/_explore.scss
+++ b/src/styles/_explore.scss
@@ -202,6 +202,8 @@ $explore--wide-content-width: 1020px;
 .explore--wide-content {
   width: $explore--wide-content-width;
   overflow-x: hidden;
+  z-index: $z-index-2;
+  transition: transform 1s ease;
 }
 
 .explore--wide-content-container {
@@ -222,6 +224,10 @@ $explore--wide-content-width: 1020px;
 
 .explore--content-closed {
   width: 0;
+
+  .explore--wide-content {
+    transform: translateX(-100%);
+  }
 }
 
 .explore--breadcrumbs {
